# Nexora-Warehouse

./: .gitignore  CLAUDE.md  README.md  groaq.txt  redis.txt  render.yaml
backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  backendworkflow.txt  config.py  constants.py  intro.txt  llm_factory.py  main.py  pyproject.toml
backend/agents/: __init__.py  ceo_agent.py  communication_agent.py  demand_forecast_agent.py  finance_agent.py  inventory_agent.py  knowledge_agent.py  logistics_agent.py  orchestrator.py  order_fulfillment_agent.py  procurement_agent.py  risk_intelligence_agent.py  supplier_risk_agent.py  warehouse_transfer_agent.py
backend/api/: ceo.py  communication.py  finance.py  inventory.py  knowledge.py  orchestrator.py  procurement.py  rag.py
backend/database/: connection.py  init_db.py
backend/events/: __init__.py  cron_events.py  domain_events.py  inngest_client.py
backend/graphs/: __init__.py
backend/memory/: redis_manager.py
backend/rag/: chroma_store.py  chunker.py  embedder.py  pgvector_store.py  pipeline.py  retriever.py  seed.py
backend/rag/documents/: business_sop.md  executive_knowledge.md  logistics_rules.md  supplier_policies.md
backend/schemas/: ceo.py  communication.py  finance.py  knowledge.py  orchestrator.py  pr_schemas.py
backend/tools/: ceo_tools.py  communication_tools.py  demand_forecast_tools.py  finance_tools.py  inventory_tools.py  knowledge_tools.py  logistics_tools.py  order_fulfillment_tools.py  pr_tools.py  procurement_tools.py  risk_intelligence_tools.py  supplier_risk_tools.py  warehouse_transfer_tools.py
(+88 files in other folders)
