[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "lancedb>=0.33.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis[asyncio]>=8.0.0",
    "uvicorn[standard]>=0.49.0",
]
